# CryExample

./: .gitignore  CONTRIBUTING  Game.cryproject  LICENSE  README.md
Assets/: testentity.schematyc_ent  testentity.schematyc_ent.cryasset
Assets/Audio/sdlmixer/ace/: my_triggers.xml
Assets/Audio/sdlmixer/assets/: p_pro_impact_bullet_impact_metal_thick.ogg.cryasset
Assets/Levels/: example.level.cryasset
Assets/Levels/example/: example.level  filelist.xml  filelist.xml.cryasset  level.pak
Assets/Levels/example/Layers/: main.lyr  terrain.lyr
Assets/Levels/example/leveldata/: Environment.xml  Environment.xml.cryasset  TerrainTexture.xml  TimeOfDay.xml
Assets/Libs/config/: defaultprofile.xml.cryasset
Assets/Libs/config/Profiles/default/: actionmaps.xml.cryasset  attributes.xml.cryasset  profile.xml.cryasset
Assets/Libs/config/Profiles/default/levelrotation/: levelrotation.xml.cryasset
Assets/Libs/environmentpresets/: example.env.cryasset  example.xml.cryasset
Assets/Libs/flownodes/: FlownodeBlacklist.xml.cryasset  Substitutions.xml.cryasset
Assets/Scripts/: GameObjectSerializationOrder.xml.cryasset
Assets/Scripts/AI/: Factions.xml.cryasset
Assets/Scripts/network/: CompressionPolicy.xml.cryasset  EntityScheduler.xml.cryasset  Scheduler.xml.cryasset
Assets/Textures/cubemaps/example/: environmentprobe1_cm.dds  environmentprobe1_cm.dds.cryasset  environmentprobe1_cm_diff.dds  environmentprobe1_cm_diff.dds.cryasset
Assets/objects/schematyc/: schematycfunctionexample.schematyc_ent  schematycfunctionexample.schematyc_ent.cryasset  schematycsignalexample.schematyc_ent  schematycsignalexample.schematyc_ent.cryasset
Assets/schematyc/: simplyphysicsball.schematyc_ent  simplyphysicsball.schematyc_ent.cryasset
Code/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h  StdAfx.h
Code/Components/: Player.cpp  Player.h  SpawnPoint.cpp  SpawnPoint.h
Code/Components/Blank Component/: BlankComponent.cpp  BlankComponent.h
Code/Components/Schematyc/: SchematycFunction.cpp  SchematycFunction.h  SchematycProperties.cpp  SchematycProperties.h  SchematycSignal.cpp  SchematycSignal.h
Code/Components/Simple Entities/CVAR/: ConsoleVariable.cpp  ConsoleVariable.h
Code/Components/Simple Entities/ConsoleCommands/: ConsoleCommands.cpp  ConsoleCommands.h
Code/Components/Simple Entities/EditorVariables/: EditorVariablesComponent.cpp  EditorVariablesComponent.h  SimpleComponentProperty.cpp  SimpleComponentProperty.h
Code/Components/Simple Entities/EditorVariables/GroupedComponentProperties/: GroupedComponentProperties.cpp  GroupedComponentProperties.h
Code/Components/Simple Entities/EditorVariables/MoreComponentProperties/: SimpleComponentProperty.cpp  SimpleComponentProperty.h
Code/Components/Simple Entities/Events/: EntityEvents.cpp  EntityEvents.h
Code/Components/Simple Entities/PhysicsComponent/: CollisionComponent.cpp  CollisionComponent.h
Code/Components/Simple Entities/PhysicsComponent/Raycasting/: Raycasting.cpp  Raycasting.h
Code/Components/Simple Entities/Timers/: TimerComponent.cpp  TimerComponent.h
Code/Editor Examples/Console Commands/: ConsoleCommands.cpp  ConsoleCommands.h
Code/Editor Examples/Console Variables (CVARs)/: ConsoleVariable.cpp  ConsoleVariable.h
Code/EntityComponent Minimal/: BlankComponent.cpp  BlankComponent.h
Code/EntityComponent basics/Component Properties/GroupedComponentProperties/: GroupedComponentProperties.cpp  GroupedComponentProperties.h
Code/EntityComponent basics/Component Properties/Simple Component Properties Example/: SimpleComponentProperty.cpp  SimpleComponentProperty.h
Code/EntityComponent basics/Events/: EntityEvents.cpp  EntityEvents.h
Code/EntityComponent basics/Input Examples/: InputEntity.cpp  InputEntity.h
Code/EntityComponent basics/Timers/: TimerComponent.cpp  TimerComponent.h
Code/Physics Examples/Collision Examples/: CollisionComponent.cpp  CollisionComponent.h
Code/Physics Examples/Raycasting Examples/: Raycasting.cpp  Raycasting.h
Code/Schematyc Examples/Schematyc Function examples/: SchematycFunction.cpp  SchematycFunction.h
Code/Schematyc Examples/Schematyc Properties examples/: SchematycProperties.h
Code/Schematyc Examples/Schematyc Signals examples/: SchematycSignal.cpp  SchematycSignal.h
user/sandbox/: Personalization.json  assets.json  lastloadpath.preset
user/shaders/cache/: globals.txt
user/shaders/cache/d3d11/: version.txt
user/shaders/cache/d3d11/cgpshaders/: fixedpipelineemu@dummyps
